/**
 * @Author: zjj
 * @Date: 2025/11/12
 * @Desc: 系统数据定义 proto
**/

syntax = "proto3";
package pb3;
option go_package = "server/internal/protocol";
import "base.proto";

enum SystemId {
    SystemIdNil = 0;
    SysLevel = 1;// 等级系统
    SysSkill = 2;// 技能系统

    SysIdMax = 5;// 最大系统ID 手动递增
}

// 等级系统
message SiLevelData {
    uint32 level = 1;
    int64 exp = 2;
}

// 技能系统
message SiSkillData {
    map<uint32, uint32> skill_map = 1;// 技能列表（skillId -> level）
}
